# ai-taskvector

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  README.md  TRAINING_ASSISTANT.md  VISION.md  all_errors_log.txt  backup_models.py  chat_with_ai.py  chat_with_local_ai.py  chat_with_model.py  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  temperature_env.py  test_assistants.py  test_env_factory.py  test_environments.py  test_model.py  test_normalizer.py  train.py
LLM_integrations/: README.md  __init__.py  client.py  ollama.py
agents/: README.md  __init__.py  follow_ups.py  prompts.py
assistants/: ASSISTANT_WORKFLOW_DIAGRAM.md  ASSISTANT_WORKFLOW_README.md  GUI_WORKFLOW_MIGRATION.md  IMPLEMENTATION_CHECKLIST.md  MIGRATION_ROLES_SKILLS.md  MIGRATION_ROLES_TOOLS.md  README.md  WORKFLOW_DESIGNER.md  __init__.py  __main__.py  assistant_workflow.json  browser.json  config_edits.py  create_filename.json  edit_workflow_runner.py  follow_ups.py  graph_edits.py  import_resolver.py  llm_parsing.py  process_assistant.py  prompts.py  rag_update.json  rl_coach_workflow.json  runner.py  text_to_reward.py  todo_list.py  training_assistant.py  units_library.py  web_search.json
chat_with_assistants/: __init__.py  chat.py
config/: README.md  TRAINING_CONFIG_GUIDE.md  app_settings_example.json
core/: README.md  __init__.py
deploy/: README.md  __init__.py  agent_inject.py  canonical_inject.py  comfyui_bridge.py  flow_inject.py  oracle_inject.py  rl_inference_server.py
docs/: AI_TASKVECTOR_CONCEPT.md  VISION.md  (+19 more)
(+1743 files in other folders)
