[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_taskvector"
version = "0.0.1"
description = "AI TaskVector framework and GUI"
requires-python = ">=3.10"
dependencies = [
  "ollama>=0.3.0",
  "rule-engine",
  "asteval>=0.9.31",
  "fastapi>=0.100.0",
  "uvicorn>=0.22.0",
  "requests>=2.32.0",
  "websocket-client>=1.6.0",
  "gymnasium>=0.29.0",
  "stable-baselines3[extra]>=2.0.0",
  "tensorboard>=2.11.0",
  "tqdm>=4.65.0",
  "rich>=13.0.0",
  "torch>=2.0.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "formulas>=1.2.0",
  "scikit-learn>=1.3.0",
  "matplotlib>=3.7.0",
  "pydantic>=2.0.0",
  "pyyaml>=6.0",
  "lingua-language-detector>=2.0.0",
  "markdown-it-py>=3.0.0",
  "Pygments>=2.17.0",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[project.optional-dependencies]
gui = [
  "flet>=0.27.0",
  "flet-code-editor>=0.82.0",
]

rag = [
  "chromadb>=0.4.0",
  "docling>=2.0.0",
  "sentence-transformers>=2.2.0",
  "requests>=2.28.0",
]

units-web = [
  "duckduckgo-search>=6.0.0",
  "html2text>=2020.1.0",
  "beautifulsoup4>=4.12.0",
  "minify-html>=0.15.0",
]

units-semantics = [
  "lingua-language-detector>=2.0.0",
  "markdown-it-py>=3.0.0",
  "Pygments>=2.17.0",
  "spacy>=3.5,<4.0",
]
